--- a/apps/ui/style/variables.css
+++ b/apps/ui/style/variables.css
@@ -30,6 +30,10 @@
 
     --topbar-height: 70px;
 
+    --font-weight-normal: 400;
+    --font-weight-medium: 500;
+    --font-weight-bold: 700;
+
     --text-h1-font-size: 2.25rem; /* 36px */
     --text-h1-font-weight: 500;
     --text-h1-line-height: 3.375rem; /* 54px */
