--- a/apps/ui/style/variables.css
+++ b/apps/ui/style/variables.css
@@ -28,6 +28,7 @@
     --sizing-7: 35px;
     --sizing-8: 40px;
 
+    --header-height: 100px;
     --topbar-height: 70px;
 
     --font-weight-normal: 400;
