--- a/apps/ui/src/components/Button/button.css
+++ b/apps/ui/src/components/Button/button.css
@@ -1,6 +1,4 @@
 .Button-root {
-    background: var(--color-primary);
-    border: none;
     border-radius: var(--size-border-radius);
     color: var(--color-text-primary);
     font-size: var(--text-button-font-size);
@@ -13,12 +11,26 @@
     width: fit-content;
 }
 
+.Button-contained {
+    background: var(--color-primary);
+    border: none;
+}
+
+.Button-outlined {
+    background: transparent;
+    border: 1px solid var(--color-primary);
+}
+
 .Button-root:active {
     transform: translateY(2px);
 }
 
 .Button-root:hover {
     box-shadow: 0 5px 10px 1px rgba(0, 0, 0, 0.25);
+}
+
+.Button-root--fitContentWidth {
+    min-width: unset;
 }
 
 .Button-root--fullWidth {
