--- a/apps/ui/style/variables.css
+++ b/apps/ui/style/variables.css
@@ -13,7 +13,7 @@
     --color-text-primary: #ffffff;
     --color-text-secondary: #c1c1c1;
 
-    --color-error: #e63946;
+    --color-danger: #e63946;
     --color-info: #4f8cdb;
     --color-success: #77a43f;
     --color-warning: #f0a500;
