--- a/apps/ui/src/components/PageContent/listPageContent.css
+++ b/apps/ui/src/components/PageContent/listPageContent.css
@@ -6,6 +6,9 @@
 
 .ListPageContent-actions {
   border-left: 1px solid var(--color-border);
+  display: flex;
+  flex-direction: column;
+  gap: var(--sizing-4);
   grid-column: 9 / 11;
   height: 100%;
   padding: var(--sizing-4);
@@ -23,18 +26,20 @@
 
 @media (max-width: 600px) {
   .ListPageContent-root {
-    grid-template-columns: repeat(1, 1fr);
-    padding: var(--sizing-4);
+    display: flex;
+    flex-direction: column-reverse;
   }
 
   .ListPageContent-actions {
-    display: none;
+    border-bottom: 1px solid var(--color-border);
+    border-left: none;
+    height: fit-content;
   }
 
   .ListPageContent-list {
-    grid-column: 1 / 2;
+    margin-top: var(--sizing-4);
     overflow-x: auto;
-    padding: 0;
+    padding-top: 0;
     width: 100%;
   }
 }
