--- a/apps/ui/src/modules/login/loginPage.css
+++ b/apps/ui/src/modules/login/loginPage.css
@@ -1,8 +1,8 @@
 .FullPage-root {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
 }
 
 @media (max-width: 600px) {
