feat: mobile nav

--- a/apps/ui/src/components/PageHeader/pageHeader.css
+++ b/apps/ui/src/components/PageHeader/pageHeader.css
@@ -4,3 +4,9 @@
   padding-inline: var(--sizing-8);
   width: 100%;
 }
+
+.PageHeader-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
