--- a/apps/ui/src/components/Nav/navCategory.css
+++ b/apps/ui/src/components/Nav/navCategory.css
@@ -1,13 +1,3 @@
-.Nav-root {
-  border-right: 1px solid var(--color-border);
-  display: flex;
-  flex-direction: column;
-  gap: var(--sizing-4);
-  grid-column: 1 / 3;
-  height: 100%;
-  padding: var(--sizing-4);
-}
-
 .NavCategory-root {
   display: flex;
   flex-direction: column;
@@ -28,17 +18,17 @@
   padding-left: var(--sizing-2);
 }
 
-.NavCategory-item {
-  font-weight: var(--font-weight-medium) !important;
-  text-decoration: none;
-}
-
-.NavCategory-item:hover {
-  color: var(--color-text-secondary);
+.NavCategory-items li {
+  width: 100%;
 }
 
 @media (max-width: 600px) {
-  .Nav-root {
-    display: none;
+  .NavCategory-header {
+    text-align: right;
+  }
+
+  .NavCategory-items {
+    padding-left: 0;
+    padding-right: var(--sizing-2);
   }
 }
